Changelog
=========


1.3.5 (unreleased)
------------------

- Plone 4.3 compatibility
  [mathias.leimgruber]


1.3.4 (2013-08-23)
------------------

- Fix post request (save poodle votes).
  [mathias.leimgruber]


1.3.3 (2013-08-14)
------------------

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]


1.3.2 (2013-07-05)
------------------

- Fixes javascript error on IE8
   [href]


1.3.1 (2013-04-17)
------------------

- Replace jq by $.
  [mathias.leimgruber]


1.3 (2012-11-22)
----------------

- Public release on pypi / plone.org
  [jone]


1.2 (2012-08-21)
----------------

- Adjust Notification Adapters: so that the regular notification of a poodle works still fine.
  [phgross]

- Fix: Do no override Owner role.
  [mathias.leimgruber]

- Fix: Use nested persistentMappings/Lists.
  [phgross]

- Use ftw.notification.email for email notification.
  [phgross]

- Added tests.
  [phgross]

- Updated workfow: do not allow Member to see all poodles.
  [Julian Infanger]


1.1.4 (2012-06-13)
------------------

- Translate workflow transitions
  [mathias.leimgruber]


1.1.3 (2012-05-14)
------------------

- Fix UnicodeDecodeError while sending user notifications.
  [mathias.leimgruber]


1.1.2 (2012-05-10)
------------------

- Found a second getfullname method -.- fix this one too.
  [mathias.leimgruber]


1.1.1 (2012-05-09)
------------------

- Small usability customizations.
  This package needs refactoring.
  [mathias.leimgruber]


1.1 (2012-03-12)
----------------

- Added german translation for deactivated survey.
  [Julian Infanger]


1.0 (2012-03-05)
----------------

- Fixed Mailsubject.
  [ttschanz]

- Added getMeeting_type for ftw.workspace / tabbed view compatibility
  [jbaumann]

- added comments and docstrings
  [mathias.leimgruber]

- added german translations
  [mathias.leimgruber]

- remove some unused code
  [mathias.leimgruber]

- code review and optimizations
  [mathias.leimgruber]

- copy from izug.poodle version 1.0c3