@@ -6,7 +6,7 @@
     <input type="hidden" value="1" name="voted" />
   <table tal:attributes="id string:poodletable_${context/UID}" class="poodletable listing" metal:define-macro="poodle_listingy"
          tal:define="poodledata context/getPoodleData;
-                     users python:poodledata['users'].keys();
+                     users view/get_sorted_users;
                      dates context/getDates;
                      member here/@@plone_portal_state/member">
       <tr>
